--- a/www/main.html
+++ b/www/main.html
@@ -34,7 +34,7 @@ body {
 }
 
 #navbar a.active {
-  background-color: #4CAF50;
+  background-color: #3f9ca4;
   color: white;
 }
 
@@ -66,9 +66,12 @@ body {
 </div>
 
 <div id="navbar">
-  <a class="active" href="javascript:void(0)">Orri Nagusia</a>
-  <a href="javascript:void(0)">Berria</a>
-  <a href="javascript:void(0)">Kontaktuak</a>
+<ul style="list-style-type: none; margin: 0px; padding: 0px">
+  <li><a class="active" href="main.html">Orri Nagusia</a></li>
+  <li><a href="berriak.html">Berriak</a></li>
+  <li><a href="kontaktua.html">Kontaktua</a></li>
+  <li style="float: right;"><a href="about.hml">Guri buruz</a></li>
+</ul>
 </div>
 
 <div class="content">
